# StudyCompanion_AGENT

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
PDFAgent/OldApproach/: agent_tools.py  config.py  load_pdf_tool.py  main.py  pdf_manager.py  question_answer_tool.py  quiz_tool.py  retriever_tool.py  summarization_tool.py
PDFAgent/ReActApproachPDFAgent/: Functions_Test.ipynb  agent_tools.py  main.py
PDFAgent/ReActApproachPDFAgent/tools/: config.py  pdf_embedder_tool.py  pdf_loader_tool.py  pdf_quesans_tool.py  pdf_quiz_tool.py  pdf_retriever_build.py  pdf_splitter_tool.py  pdf_summarize_tool.py  pdf_text_extractor_tool.py
PDFAgent/WorkflowApproachPDFAgent/: Node_Test.ipynb  Workflow_Test.ipynb
YoutubeAgent/: Node_Test.ipynb  Workflow_Test.ipynb
YoutubeAgent/fastapi_blog_workflow/: test.ipynb
YoutubeAgent/fastapi_blog_workflow/app/: db.py  main.py
YoutubeAgent/fastapi_blog_workflow/app/models/: workflow_db.py
YoutubeAgent/fastapi_blog_workflow/app/routers/: blog.py  health.py
YoutubeAgent/fastapi_blog_workflow/app/services/: workflow.py  workflow_store.py
